@startuml
    class Personnel {
        id_personnel
        nom
        prenom
        email
        telephone
        est_diplome
        permis_bateau
        specialite
    }

    class GarçonDePlage extends Personnel {
        date_embauche
        tarif_horaire
    }

    class Moniteur extends Personnel {
        date_embauche
        tarif_horaire
        niveau_experimente
    }

    class Proprietaire extends Personnel {
        date_prise_fonction
    }

    class Compte {
        identifiant
        mot_de_passe
    }

    class Saison {
        id_saison
        date_debut
        date_fin
    }

    class ArchiveSaison {
        id_archive_saison
        date_debut
        date_fin
    }

    class Client {
        id_client
        nom
        prenom
        email
        telephone
        piece_identite
    }

    class Materiel {
        id_materiel
        type_materiel
        caracteristiques
        etat
        date_acquisition
        numero_serie
    }

    class ArchiveMateriel {
        id_archive_materiel
        type_materiel
        caracteristiques
        etat
        date_acquisition
        numero_serie
    }

    class Forfait {
        id_forfait
        type_forfait
        prix
        date_achat
        date_expiration
        seances_restantes
    }

    class ArchiveForfait {
        id_archive_forfait
        type_forfait
        prix
        date_achat
        date_expiration
        seances_restantes
    }

    class Partenaire {
        id_partenaire
        nom
        adresse
        email
        telephone
        type_partenaire
        est_actif
    }

    class Camping {
        id_camping
        nom
        adresse
        email
        telephone
    }

    class Cours {
        id_cours
        date_cours
        heure_debut
        niveau
        nb_inscrits
        statut
        capacite_max
    }

    class ArchiveCours {
        id_archive_cours
        date_cours
        heure_debut
        niveau
        nb_inscrits
        statut
        capacite_max
    }

    class Location {
        id_location
        date_debut
        date_fin_prevue
        date_retour
        prix_base
        supplements
    }

    class ArchiveLocation {
        id_archive_location
        date_debut
        date_fin_prevue
        date_retour
        prix_base
        supplements
    }

    class Panne {
        id_panne
        date_panne
        date_reparation
        cout_reparation
        description
    }

    class ArchivePanne {
        id_archive_panne
        date_panne
        date_reparation
        cout_reparation
        description
    }

    class Stock {
        id_stock
        quantite
    }

    class Paiement {
        id_paiement
        date_paiement
        montant
        type_paiement
    }

    class ArchivePaiement {
        id_archive_paiement
        date_paiement
        montant
        type_paiement
    }

    enum StatutPanne {
        Signalee
        Reparation
        Reparee
        HorsService
    }

    enum StatutMateriel {
        Recu
        EnService
        EnPanne
        AuRebut
    }

    Client "1" -- "0..*" Forfait: possède
    Client "1" -- "0..*" Location: effectue
    Personnel "1" -- "0..*" Cours: anime
    Materiel "1" -- "0..*" Location: est loué dans
    Forfait "1" -- "0..*" Cours: utilisé pour
    Personnel "1" -- "0..*" Location: supervise
    Materiel "1" -- "0..*" Panne: peut tomber en panne
    ArchiveMateriel "1" -- "0..*" ArchivePanne: peut tomber en panne
    Materiel "0..*" -- "1" Stock: est stocké dans
    ArchiveCours "1" -- "0..*" ArchiveForfait: utilisé pour
    Personnel "1" --- "0..*" ArchiveCours : anime
    ArchiveForfait "1" -- "0..*" Client: possède
    Partenaire "1" -- "1..*" Forfait: vend
    Camping "1" -- "1..*" Client: accueille
    Materiel "1..*" - "1..*" Cours: est utilisé pour
    Paiement "1" -- "1..*" Forfait: payé pour
    Saison "1..*" -- "2..*" Personnel: embauche
    Saison "1" -- "0..*" Cours: a lieu pendant
    Saison "1" -- "0..*" Location: a lieu pendant
    Saison "1" -- "0..*" Panne: a lieu pendant
    Saison "1" -- "0..*" ArchiveLocation: a lieu pendant
    ArchiveSaison "1..*" -- "2..*" Personnel: embauche
    ArchiveSaison "1" -- "0..*" Cours: a lieu pendant
    ArchiveSaison "1" - "0..*" ArchivePanne: a lieu pendant
    ArchiveSaison "1" -- "0..*" ArchiveCours: a lieu pendant
    ArchiveSaison "1" -- "0..*" ArchiveLocation: a lieu pendant
    ArchivePaiement "1" -- "1..*" ArchiveForfait: payé pour
    Personnel "1" --- "1" Compte

@enduml
